--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     -->
     
     <link rel="preload" as="image" href="../assets/images/imgA3.jpg" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <title>Garance Asbl</title>
   </head>
   <body>
